--- a/src/Services/Basket/Basket.API/Dockerfile
+++ b/src/Services/Basket/Basket.API/Dockerfile
@@ -7,16 +7,16 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
-COPY ["Catelog.API/Catelog.API.csproj", "Catelog.API/"]
-RUN dotnet restore "Catelog.API/Catelog.API.csproj"
+COPY ["Services/Basket/Basket.API/Basket.API.csproj", "Services/Basket/Basket.API/"]
+RUN dotnet restore "Services/Basket/Basket.API/Basket.API.csproj"
 COPY . .
-WORKDIR "/src/Catelog.API"
-RUN dotnet build "Catelog.API.csproj" -c Release -o /app/build
+WORKDIR "/src/Services/Basket/Basket.API"
+RUN dotnet build "Basket.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Catelog.API.csproj" -c Release -o /app/publish
+RUN dotnet publish "Basket.API.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Catelog.API.dll"]
+ENTRYPOINT ["dotnet", "Basket.API.dll"]
