--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -6,6 +6,12 @@ services:
 
   basketdb:
     image: redis:alpine
+    
+  discountdb:
+    image: postgres
+  
+  pgadmin:
+    image: dpage/pgadmin4
 
   portainer:
     image: portainer/portainer-ce
@@ -14,7 +20,7 @@ services:
     image: ${DOCKER_REGISTRY-}catelog
     build:
       context: .
-      dockerfile: Services/Catelog/Catelog.API/Dockerfile
+      dockerfile: Services/Catalog/Catelog.API/Dockerfile
 
   basket.api:
     image: ${DOCKER_REGISTRY-}basket
@@ -22,6 +28,14 @@ services:
       context: .
       dockerfile: Services/Basket/Basket.API/Dockerfile
 
+  discount.api:
+    image: ${DOCKER_REGISTRY-}discount
+    build:
+      context: .
+      dockerfile: Services/Discount/Discount.API/Dockerfile
+
 volumes:
   mongo_data:
   portainer_data:
+  postgres_data:
+  pgadmin_data:
